verify test making

--- a/spotathome/Dockerfile
+++ b/spotathome/Dockerfile
@@ -1,9 +1,7 @@
 FROM ubuntu
-
-
 RUN apt-get update
 RUN apt-get install -y g++ git make zlib1g-dev libboost-all-dev libssl-dev cmake
-
+RUN apt-get install -y vim
 RUN useradd -ms /bin/bash dev
 USER dev
 WORKDIR /home/dev
@@ -16,13 +14,11 @@ RUN cmake .. -DCMAKE_BUILD_TYPE=Debug
 RUN make
 USER root
 RUN make install
-RUN apt-get install -y vim
 USER dev
 WORKDIR /home/dev
 RUN ls
 RUN git clone https://github.com/chusAlvarez/spotathome.git spotathome
 WORKDIR /home/dev/spotathome
 RUN make clean
-RUN make test
-RUN make buildmain
+RUN export LD_LIBRARY_PATH=/usr/local/lib && make test
 ENTRYPOINT /bin/bash
